# mags

./: .gitignore  Makefile  README.md  install.sh  setup.py
mags/: mags.py
mags/cpp/: CMakeLists.txt
mags/cpp/include/: astar.h  graph.h
mags/cpp/src/: main.cpp
mags/python/: mags.py  move_manager.py  test.py
mags/python/astar/: astar.py  graph.py  utils.py
mags/python/mags/: binary_board_sender.py  klipper_interface.py  mags.py  move_manager.py  move_observer.py
mags/python/mags/planning/: astar.py  board.py  graph.py  utils.py
mags/python/planning/: astar.py  board.py  graph.py  utils.py
mags/static/: package-lock.json  package.json
mags/static/js/: main.js
mags/static/sass/: main.scss
mags/templates/: index.html
static/: package-lock.json  package.json
